add basic play command

--- a/.env.example
+++ b/.env.example
@@ -6,14 +6,18 @@ TRANSPORT_PORT=8080
 FALLBACK_LANGUAGE=en_US
 ENABLE_DOCUMENTATION=true
 API_VERSION=v1.0.0
-ADMINJS_RELATIONS_LICENSE_KEY=license_key
-TELEGRAM_API_KEY=bot_key
+
+#== ADMIN
+ADMINJS_RELATIONS_LICENSE_KEY=<LICENSE_KEY>
+
+#== DISCORD
+DISCORD_TOKEN=<DISCROD_TOKEN>
 
 #== DB
 DB_TYPE=postgres
 DB_HOST=127.0.0.1
 DB_PORT=5432
-DB_USERNAME=db_username
-DB_PASSWORD=db_password
-DB_DATABASE=db_name
+DB_USERNAME=<DB_USERNAME>
+DB_PASSWORD=<DB_PASSWORD>
+DB_DATABASE=<DB_NAME>
 ENABLE_ORM_LOGS=true
