--- a/package.json
+++ b/package.json
@@ -31,11 +31,18 @@
     "db:reset": "pnpm db:drop && pnpm db:create && pnpm db:migrate && pnpm db:seed"
   },
   "dependencies": {
+    "@discord-nestjs/common": "^5.2.12",
+    "@discord-nestjs/core": "^5.3.14",
+    "@discordjs/voice": "^0.18.0",
+    "@distube/ytdl-core": "^4.15.1",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "discord.js": "^14.16.3",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "yt-search": "^2.12.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.16.0",
@@ -49,6 +56,7 @@
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
     "@types/supertest": "^6.0.2",
+    "@types/yt-search": "^2.10.3",
     "@typescript-eslint/eslint-plugin": "^8.17.0",
     "@typescript-eslint/parser": "^8.17.0",
     "dotenv": "^16.4.7",
